<resources>
    <string name="app_name">SSSC</string>
    <string name="title_events">Events</string>
    <string name="title_grades">Grades</string>
    <string name="title_resources">Resources</string>
    <string name="title_settings">Settings</string>

    <string name="terms_tab">Terms</string>
    <string name="calculator_tab">Calculator</string>
    <string name="calculated_overall_cgpa">Overall CGPA: %.1d</string>
    <string name="calculated_major_cgpa">Major CGPA: %.1d</string>

    <string name="planner_tab">Planner</string>
    <string name="planner_message">If you want to achieve a certain overall CGPA, use the section below to determine what CGPA you should aim for the current term.</string>
    <string name="planner_subtitle">TERM CGPA FOR DESIRED OVERALL CGPA</string>
    <string name="overall_planner_message">You can use the selection below to determine your overall CGPA based off a predicted CGPA for this term.</string>
    <string name="overall_subtittle">OVERALL CGPA WITH PREDICTED TERM CGPA</string>
    <string name="current_cgpa_placeholder">8.9</string>
    <string name="current_cgpa">Current CGPA</string>
    <string name="credits_complete_placeholder">5.0</string>
    <string name="credits_complete">Credits Complete</string>
    <string name="desired_cgpa">Desired CGPA</string>
    <string name="desired_cgpa_placeholder">10.0</string>
    <string name="credits_progress">Credits in Progress</string>
    <string name="credits_progress_placeholders">2.5</string>
    <string name="calculated_CGPA">Calculated CGPA</string>
    <string name="calculated_CGPA_placeholder">Enter Info Above</string>
    <string name="predicted_CGPA">Predicted CGPA</string>
    <string name="predicted_CGPA_placeholder">9.4</string>
    <string name="overall_CGPA">Overall CGPA</string>

    <string name="settings_cgpa_label">CGPA CALCULATOR</string>
    <string name="settings_in_progress_course">Include In-Progress Courses</string>
    <string name="settings_in_progress_description">If toggled on, courses without a Final Grade specified will be included in your CGPA calculations on the CGPA Calculator page.</string>
    <string name="settings_backup_label">BACK UP GRADES</string>
    <string name="settings_backup_button">Back Up Grades</string>
    <string name="settings_backup_description">Open the exported attachment on your device to launch the Science Student Success Centre app and restore your data.</string>
    <string name="settings_acknowledgements_title">ACKNOWLEDGEMENTS</string>
    <string name="settings_acknowledgements_body">This app was developed for the Carleton University Science Student Success Centre by the SSSC CS Team and Fareed Ahmad. Special thanks to Kshamina Ghelani, Selasi Kudolo, Gina Bak, Anisha Ghelani, Lily Visanuvimol, Divin Kang, Ian Beitz, Avery Vine and everyone else at the SSSC who helped out along the way.</string>
    <string name="settings_copyright">Released under GNU General Public License v3.0 |\nCopyright @ 2019</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
