<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_event_black_24dp"
        android:title="@string/title_events" />

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/ic_check_box_black_24dp"
        android:title="@string/title_grades" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_description_black_24dp"
        android:title="@string/title_resources" />

    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/ic_settings_black_24dp"
        android:title="@string/title_settings" />

    <!-- Settings only needed for Grades portion, uncomment later -->
    <!--<item-->
        <!--android:id="@+id/navigation_settings"-->
        <!--android:icon="@drawable/ic_settings"-->
        <!--android:title="@string/settings" />-->

</menu>
